Fixing an issue that prevented tests from running.